Update github workflow

--- a/.github/workflows/purgecss.js.yml
+++ b/.github/workflows/purgecss.js.yml
@@ -24,11 +24,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
+        persist-credentials: true # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
         fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
     - name: Check last commit author
       if: github.event.pusher.name == 'github-actions'
-      run: echo "Commit loop detected! Exiting." && exit 1
+      run: echo "Commit loop detected! Exiting." && exit 0
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
