--- a/.github/workflows/purgecss.js.yml
+++ b/.github/workflows/purgecss.js.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         git config --local user.email "github-actions@users.noreply.github.com"
         git config --local user.name "github-actions"
-        git commit -am "Commit PostCSS files"
+        git commit -am "Commit PostCSS files" || echo "Nothing to commit, exiting cleanly..." && exit 0
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
